added instruction for installation, uses docker-compose to build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
 version: '2'
 services:
         docker-ssh:
+                build: .
                 image: docker-ssh
                 ports:
                   - "2022:22"
